# offlineVoice

./: .gitignore  README.md  config.json  config.py  llm_ollama_service.py  mac_client.py  main.py  offline_agent.py  pyproject.toml  requirements.txt  streaming_tts_service.py  streaming_whisper_service.py  streaming_whisper_service_1.py  stt_whisper_service.py  test_caching.py  tts_chatterbox_service.py  tts_coqui_service.py  vad_service.py  websocket_server_streaming.py  websocket_server_streaming_1.py  websocket_server_streaming_2.py  websocket_server_streaming_3.py  whisper_service.py
