[project]
name = "offline-mode-03112025"
version = "0.1.0"
description = "TTS offline mode"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "tts>=0.22.0",
]

[tool.uv]
# Tell uv that pkuseg needs numpy to build
extra-build-dependencies = { pkuseg = ["numpy"] }
