[project]
name = "offlineVoice"
version = "0.1.0"
requires-python = ">=3.11,<3.12"  # Lock to Python 3.11 only
dependencies = [
    "chatterbox-tts==0.1.4",  # This will pull torch==2.6.0
    "faster-whisper>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0,<1.26.0",  # Match chatterbox requirements
    # Don't specify torch/torchaudio here - let chatterbox-tts control the versions
]
